# Tavern

./: .gitignore  LICENSE  progress.md  readme.md  roadmap.md  tavern-design.md
daemon/: README.md  conftest.py  pyproject.toml  requirements.txt
daemon/scenarios/: skirmish.json
daemon/tavern/: __init__.py  __main__.py  bridge.py  config.py  directives.py  fakestate.py  hub.py  knowledge.py  llm.py  main.py  persona.py  schema.py  strategy.py  summarizer.py  voice.py
daemon/tests/: test_bridge.py  test_directives.py  test_grounding_outcome.py  test_persona_and_hub.py  test_schema.py  test_strategy.py  test_summarizer.py  test_voice.py
docs/: README.md  bridge-protocol.md  in-game-setup.md
map-mod/: README.md
personas/: README.md  dakkar.yaml  grollum.yaml  sera.yaml  vex.yaml
scripts/: README.md  setup.ps1
